Added search function across all albums... need to add click photo from this view.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,18 @@
                 android:value=".activities.AlbumView" />
         </activity>
         <activity
-            android:name=".PhotoView"
+            android:name=".activities.PhotoView"
             android:parentActivityName=".activities.AlbumView">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.AlbumView" />
+        </activity>
+        <activity
+            android:name=".SearchView"
+            android:parentActivityName=".activities.Home">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.Home" />
         </activity>
     </application>
 
