Moved activity to appropriate package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
                 android:value=".activities.AlbumView" />
         </activity>
         <activity
-            android:name=".SearchView"
+            android:name=".activities.SearchView"
             android:parentActivityName=".activities.Home">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
